service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix
  namespace: kiwix
spec:
  selector:
    app: kiwix
  ports:
    - name: kiwix
      port: 8080
      targetPort: 8080
