ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiwix-ingress
  namespace: kiwix
spec:
  ingressClassName: traefik
  rules:
  - host: kiwix.ryzen.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiwix
            port:
              number: 8080
